--- a/semana 5/ListaDeTareas/ListaDeTareas.cbp
+++ b/semana 5/ListaDeTareas/ListaDeTareas.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="./" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="./" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -33,6 +35,8 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="Fecha.cpp" />
+		<Unit filename="Tarea.cpp" />
+		<Unit filename="Tarea.h" />
 		<Unit filename="fecha.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
