--- a/Todas las clases de los lunes hasta semana 6/AppGestion/AppGestion.cbp
+++ b/Todas las clases de los lunes hasta semana 6/AppGestion/AppGestion.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="../AppGestion" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="../AppGestion" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,6 +34,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="clsAlumno.cpp" />
+		<Unit filename="clsAlumno.h" />
+		<Unit filename="clsFecha.cpp" />
+		<Unit filename="clsFecha.h" />
+		<Unit filename="clsMateria.cpp" />
+		<Unit filename="clsMateria.h" />
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
